tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_deny_abi_attribute_outside_of_contract/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: #[abi(tag)] attributes can only be used in contracts
  ┌─ src/main.nr:3:9
  │
3 │         #[abi(foo)]
  │         ----------- misplaced #[abi(tag)] attribute
  │

Aborting due to 1 previous error
