tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_deny_abi_attribute_outside_of_contract/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: #[abi(tag)] attributes can only be used in contracts
  ┌─ src/main.nr:3:9
  │
3 │         #[abi(foo)]
  │         ----------- misplaced #[abi(tag)] attribute
  │

Aborting due to 1 previous error
